--- a/index.html
+++ b/index.html
@@ -7,42 +7,48 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="css/main.css">
+	
+	
     <title>WEATHER APP FORECAST</title>
-    <style type="text/css">
-    	.container{
-    		text-align:center;
-    		margin-top:200px;
-    	}
-    	#weather
-    	{
-    		margin-top:15px;
-    	}
-    </style>
   </head>
   <body>
   	<div class="container">
-  		<h1>Hi what's the weather?</h1>
-    
+	<h1>Hi what's the weather?</h1>
+    <div class="container-panel">
+		<label for="state">Choose a City</label>
+		<select class="custom-select d-block w-100" id="state" required="" onchange="checkWeather(this);">
+			<option value=""></option>
+			<option value="Milan">Milan</option>
+			<option value="Turin">Turin</option>
+			<option value="Kiev">Kiev</option>
+		</select>
+		
+	</div>
+	<div class="container-data">
 		<div id="temp">loading weather data</div>
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	</div>
+	<div class="container-forecast" id="tempday">
+	Forecast for next 10 days:
+	<ul class="list-group" >
+		<li class="list-group-item" id="0"></li>
+		<li class="list-group-item" id="1"></li>
+		<li class="list-group-item" id="2"></li>
+		<li class="list-group-item" id="3"></li>
+		<li class="list-group-item" id="4"></li>
+		<li class="list-group-item" id="5"></li>
+		<li class="list-group-item" id="6"></li>
+		<li class="list-group-item" id="7"></li>
+		<li class="list-group-item" id="8"></li>
+		<li class="list-group-item" id="9"></li>
+	</ul>
+	</div>
+	<!-- Loading all the script after loading static page -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<script>
-	$(document).ready(function(){
-	  var city = "Milano";
-	  var searchtext = "select item.condition from weather.forecast where woeid in (select woeid from geo.places(1) where text='" + city + "') and u='c'"
-	  //change city variable dynamically as required
-	  $.getJSON("https://query.yahooapis.com/v1/public/yql?q=" + searchtext + "&format=json").success(function(data){
-	   console.log(data);
-	   $('#temp').html("Temperature in " + city + " is " + data.query.results.channel.item.condition.temp + "°C"+" "+data.query.results.channel.item.condition.text);
-	  });
-	});
-</script>
-<a href="https://www.yahoo.com/?ilc=401" target="_blank"> <img src="https://poweredby.yahoo.com/purple.png" width="134" height="29"/> </a>
+	<script src="/script/js/weather.js" ></script>
+	
+	<a href="https://www.yahoo.com/?ilc=401" target="_blank"> <img src="https://poweredby.yahoo.com/purple.png" width="134" height="29"/> </a>
  </body>
 </html>
