--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>WEATHER APP FORECAST</title>
   </head>
   <body>
+	<div class="loading"></div> 
   	<div class="container">
 	<h1>Hi what's the weather?</h1>
     <div class="container-panel">
@@ -22,11 +23,14 @@
 			<option value="Milan">Milan</option>
 			<option value="Turin">Turin</option>
 			<option value="Kiev">Kiev</option>
+			<option value="Rome">Rome</option>
+			<option value="New York">New York</option>
+			<option value="Tokyo">Tokyo</option>
 		</select>
 		
 	</div>
 	<div class="container-data">
-		<div id="temp">loading weather data</div>
+		<div id="temp"></div>
 	</div>
 	<div class="container-forecast" id="tempday">
 	Forecast for next 10 days:
